This is the change log for assignment 1, initial entry, Last entry First.

2/14/2016 17:08 Kelly Liu added login function and menubar view
2/14/2016 Lin Zhu