@@ -1,4 +1,5 @@
 This is the change log for assignment 1, initial entry, Last entry First.
 
+2/14/2016 17:14 Lin Zhu - added Access model, which retrieves data from db functions vary, setup for paging and other values to be get from table
 2/14/2016 17:08 Kelly Liu added login function and menubar view
 2/14/2016 Lin Zhu
